--- a/studio.html
+++ b/studio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style2.css" />
+    <link rel="stylesheet" href="styles/style-studio.css" />
   </head>
   <header>
 		<section class="navbar2">
@@ -15,10 +16,21 @@
   </header>
   <body>
     <section class="core">
-      <h2>HISTORY</h2>
+      <h2>HISTORIC</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis et mi a felis finibus pulvinar ut ut quam. Curabitur mattis consectetur lorem, eget commodo urna luctus eu. Sed laoreet justo at nisi auctor pulvinar. Nullam quis nisi aliquam, rhoncus risus nec, semper ante. Morbi massa velit, laoreet sit amet placerat ut, ultricies et odio. Aenean lobortis egestas porttitor. Vivamus aliquet risus at quam tempor, ut aliquet libero pulvinar. Sed quis sem ut tellus tincidunt viverra.
       Nullam eu rutrum leo. Etiam posuere quam quis viverra ultrices. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam blandit vulputate iaculis. Aenean egestas elit a ante iaculis, at condimentum turpis pharetra. Vivamus ac accumsan libero. Duis dictum eget eros sed varius. Nulla in venenatis turpis. Aenean finibus accumsan est, et molestie felis iaculis gravida. Praesent rutrum enim ut neque eleifend, molestie aliquam arcu egestas.
       </p>
+    </section>
+    <section class="core">
+      <h2>TEAM</h2>
+      <section class="row1">
+        <img id="team" src=""/>
+        <img id="team" src=""/>
+        <img id="team" src=""/>
+      <section class="row1">
+        <img id="team" src=""/>
+        <img id="team" src=""/>
+      </section>
     </section>
     
   </body>
