--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <body>
 	<section class="navbar1">
     		<section class="s1">
-					<a id="nav-item" href="game.html">GAME</a>
 					<a id="nav-item" href="studio.html">STUDIO</a>
+					<a id="nav-item" href="https://discord.gg/gcDaWufVJW">DISCORD</a>
 				</section>
 				<section class="s2">
-          <a id="nav-item" href="">PROJECT</a>
-          <a id="nav-item" href="">HISTORY</a>
+          <a id="nav-item" href="project.html">PROJECT</a>
+          <a id="nav-item" href="game.html#report">REPORT</a>
         </section>    
 	 			<section class="s3">
-					<a id="nav-item" href="">GITHUB</a>
-          <a id="nav-item" href="">REPORT</a>
+	 				<a id="nav-item" href="game.html">GAME</a>
+	 				<a id="nav-item" href="https://github.com/LYVAM-Studio">GITHUB</a>
         </section>	
 	</section>
 	<section class="s4">
-		<a id="nav-download" href="">DOWNLOAD</a>
+		<a id="nav-download" href="game.html">DOWNLOAD</a>
 	</section>    
   </body>
 </html>
