reviewnavabar+logo & download page

--- a/game.html
+++ b/game.html
@@ -6,14 +6,27 @@
     <link rel="stylesheet" href="styles/style2.css" />
   </head>
   <header>
+    <a id="logo-a"  href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
     <section class="navbar2">
-      <img id="logo2"src="public/Logo_Lyvam.svg"/>
       <a class="nav-item" href="studio.html">STUDIO</a>
       <a class="nav-item" href="project.html">PROJECT</a>
       <a class="nav-item" id="nav-present" href="game.html">GAME</a>
     </section>
   </header>
   <body>
-    
+    <section class="coregame">
+        <section class="rowgame">
+            <h3 id="version-h3">Defense 1 - Version Alpha</h3>
+            <section class="column">
+                <button class="dwl-button" ><a class="dwl-a">LINUX</a></button>
+            </section>
+            <section class="column">
+                <button class="dwl-button"><a class="dwl-a">WINDOWS</a></button>
+            </section>
+            <section class="column">
+                <button class="dwl-button-r"><a class="dwl-a-r">REPORT</a></button>
+            </section>
+        </section>
+    </section>
   </body>
 </html>
