--- a/project.html
+++ b/project.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles/style-project.css" />
   </head>
   <header>
+    <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
 		<section class="navbar2">
-      <img id="logo2" src="public/Logo_Lyvam.svg"/>
 			<a class="nav-item" href="studio.html">STUDIO</a>
 			<a class="nav-item" id="nav-present" href="project.html">PROJECT</a>
 			<a class="nav-item" href="game.html">GAME</a>
@@ -23,7 +23,7 @@
     </section>
     <section class="core">
       <h2>CREDITS</h2>
-      <section class="row1">
+      <section class="row">
           <section class="container-lc">
               <img id="logo-unity" src="public/unity-logo.png"/>
           </section>
@@ -34,7 +34,7 @@
               <img id="logo-github" src="public/github-logo.png"/>
           </section>
       </section>
-      <section class="row1">
+      <section class="row">
           <section class="container-lc">
               <img id="logo-sublimtext" src="public/sublimtext-logo.png"/>  
           </section>
