--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <header>
-	<img id="logo1" src="public/Logo_Lyvam.svg"/>
+  		<a href="index.html"><img id="logo1"src="public/Logo_Lyvam.svg"/></a>
   </header>
   <body>
 	<section class="navbar1">
