--- a/studio.html
+++ b/studio.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles/style2.css" />
   </head>
   <header>
+    <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
 		<section class="navbar2">
-      <img id="logo2" src="public/Logo_Lyvam.svg"/>
 			<a class="nav-item" id="nav-present" href="studio.html">STUDIO</a>
 			<a class="nav-item" href="project.html">PROJECT</a>
 			<a class="nav-item" href="game.html">GAME</a>
@@ -16,7 +16,7 @@
   <body>
     <section class="core">
       <h2>TEAM</h2>
-      <section class="row1">
+      <section class="row">
         <div id="team"><img src="public/louis.png"/><p class="p-name">Louis</p></div>
         <div id="team"><img src="public/yoann.png"/><p class="p-name">Yoann</p></div>
         <div id="team"><img src="public/victor.png"/><p class="p-name">Victor</p></div>
