--- a/project.html
+++ b/project.html
@@ -26,9 +26,11 @@
       <section class="row">
           <section class="container-lc">
               <img id="logo-unity" src="public/unity-logo.png"/>
+              <p id="info">Unity 3D Engine</p>
           </section>
           <section class="container-lc">
-              <img id="logo-rider" src="public/rider-logo.png"/>
+              
+              <img id="logo-discord" src="public/discord-logo.png"/>
           </section>
           <section class="container-lc">
               <img id="logo-github" src="public/github-logo.png"/>
@@ -39,10 +41,32 @@
               <img id="logo-sublimtext" src="public/sublimtext-logo.png"/>  
           </section>
           <section class="container-lc">
-              <img id="logo-discord" src="public/discord-logo.png"/>
+              <img id="logo-rider" src="public/rider-logo.png"/>
           </section>
           <section class="container-lc">
               <img id="logo-vercel" src="public/vercel-logo.png"/>
+          </section>
+      </section>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-figma" src="public/figma-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-assetstore" src="public/assetstore-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-dicebear" src="public/dicebear-logo.png"/>
+          </section>
+      </section>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-blender" src="public/blender-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-affinity" src="public/affinity-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-" src=""/>
           </section>
       </section>
 
