--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
       <section class="row">
           <section class="container-lc">
               <img id="logo-unity" src="public/unity-logo.png"/>
-              <p id="info">Unity 3D Engine</p>
+              <!--<p id="info">Unity 3D Engine</p>-->
           </section>
           <section class="container-lc">
               
