--- a/studio.html
+++ b/studio.html
@@ -27,5 +27,12 @@
       </section>
     </section>
     <section class="core">
+      <p>The team at LYVAM Studio is united by its motivation and determination to create original games. They are animated
+by the desire to offer educational and informative games, thus enriching an underdeveloped category of
+video game market. Its members met by chance but quickly got together by sharing their own
+common passion for computer science and video games.
+LYVAM Studio members come from a variety of backgrounds, bringing experiences and skills to each
+differents and thus creating a complementarity between the members.</p>
+    </section>
   </body>
 </html>
