--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
                 <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneOSX.zip" class="dwl-a">MACOS</a></button>
             </section>
             <section class="column">
-                <button class="dwl-button-r"><a class="dwl-a-r">REPORT</a></button>
+                <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
             </section>
         </section>
     </section>
