--- a/game.html
+++ b/game.html
@@ -30,6 +30,25 @@
                 <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
             </section>
         </section>
+        <section class="rowgame">
+          <h3 id="version-h3">Defense 2 - Version Beta</h3>
+          <section class="column">
+              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX elec</a></button>
+              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX main</a></button>
+          </section>
+          <section class="column">
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a">WINDOWS elec</a></button>
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS main</a></button>
+          </section>
+          <section class="column">
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a">MACOS elec</a></button>
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS main</a></button>
+
+          </section>
+          <section class="column">
+              <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
+          </section>
+      </section>
     </section>
   </body>
-</html>
+
