--- a/game.html
+++ b/game.html
@@ -33,21 +33,23 @@
         <section class="rowgame">
           <h3 id="version-h3">Defense 2 - Version Beta</h3>
           <section class="column">
-              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX elec</a></button>
-              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX main</a></button>
+              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX</a></button>
           </section>
           <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a">WINDOWS elec</a></button>
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS main</a></button>
-          </section>
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS</a></button>
+          </section>          
           <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a">MACOS elec</a></button>
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS main</a></button>
-
+              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS</a></button>
           </section>
           <section class="column">
               <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
           </section>
+        </section>
+        <section class="rowgame2">
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX extra</a>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a">WINDOWS extra</a>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a">MACOS extra</a>
+        </section>
       </section>
     </section>
   </body>
