update font family

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <header>
-  		<a href="index.html"><img id="logo1"src="public/Logo_Lyvam.svg"/></a>
+		<a href="index.html"><img id="logo1"src="public/Brand_Lyvam.svg"/></a>
+		<a href="index.html"><img id="logo1" style="padding: 8% 0% 0% 0%;" src="public/Logo_Lyvam_Studio.svg"/></a>
   </header>
   <body>
 	<section class="navbar1">
