--- a/game.html
+++ b/game.html
@@ -46,9 +46,9 @@
           </section>
         </section>
         <section class="rowgame2">
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a">WINDOWS extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a">MACOS extra</a>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a2">LINUX extra</a>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a2">WINDOWS extra</a>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a2">MACOS extra</a>
         </section>
       </section>
     </section>
