--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
   <body>
     <section class="coregame">
         <section class="rowgame">
-            <h3 id="version-h3">Defense 1 - Version Alpha</h3>
+            <h3 id="version-h3">Defense I - Version Alpha</h3>
             <section class="column">
                 <button class="dwl-button" ><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneLinux64.zip" class="dwl-a">LINUX</a></button>
             </section>
@@ -31,7 +31,7 @@
             </section>
         </section>
         <section class="rowgame">
-          <h3 id="version-h3">Defense 2 - Version Beta</h3>
+          <h3 id="version-h3">Defense II - Version Beta</h3>
           <section class="column">
               <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX</a></button>
           </section>
