--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
+	<link rel="icon" href="public/favicon.ico">
   </head>
   <header>
 		<a href="index.html"><img id="logo1"src="public/Brand_Lyvam.svg"/></a>
