--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="stylesheet" href="styles/style-project.css" />
+    <link rel="icon" href="public/favicon.ico">
   </head>
   <header>
     <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
