--- a/studio.html
+++ b/studio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style2.css" />
+    <link rel="icon" href="public/favicon.ico">
   </head>
   <header>
     <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
