fix menu alternative pages

--- a/game.html
+++ b/game.html
@@ -4,54 +4,73 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style2.css" />
+    <link rel="stylesheet" href="styles/style-project.css" />
     <link rel="icon" href="public/favicon.ico">
   </head>
   <header>
-    <a id="logo-a"  href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
-    <section class="navbar2">
-      <a class="nav-item" href="studio.html">STUDIO</a>
-      <a class="nav-item" href="project.html">PROJECT</a>
-      <a class="nav-item" id="nav-present" href="game.html">GAME</a>
-    </section>
+    <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
+		<section class="navbar2">
+			<a class="nav-item" href="studio.html">STUDIO</a>
+      <a class="nav-item" href="game.html">GAME</a>
+      <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
+		</section>
   </header>
   <body>
-    <section class="coregame">
-        <section class="rowgame">
-            <h3 id="version-h3">Defense I - Version Alpha</h3>
-            <section class="column">
-                <button class="dwl-button" ><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneLinux64.zip" class="dwl-a">LINUX</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneWindows64.zip" class="dwl-a">WINDOWS</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneOSX.zip" class="dwl-a">MACOS</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
-            </section>
-        </section>
-        <section class="rowgame">
-          <h3 id="version-h3">Defense II - Version Beta</h3>
-          <section class="column">
-              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX</a></button>
+    <section class="core">
+      <h2>HISTORY</h2>
+      <p>LYVAM Studio has announced its new game as ReConnect. This name obviously refers to the field of study of electronics to which the game relates, but also to its scenario. Indeed, the protagonist of the game's mission is to restore communications between the colony and the Earth. So, ReConnect can be heard in the sense reconnect the colony with Earth. Finally, it is possible to see a wider message to man. The game questions the behavior of man on Earth and his decision to create a colony on another planet rather than dealing with the consequences of these activities on Earth.
+      Elon Musk and his company SpaceX already plans this kind of project, announcing plans to conquer Mars within a century so that it can survive even when Earth is no longer habitable. So we can see in the name ReConnect, a message to reconnect with his humanity and our planet. More generally, ReConnect is a game of adventure, puzzle and combat, at the third! person, 3-dimensional and set in a semi-open alien science fiction world. The main mechanics of the game are electronic puzzle resolution, fighting aggressive entities, and exploring the world.
+      </p>
+    </section>
+    <section class="core">
+      <h2>CREDITS</h2>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-unity" src="public/unity-logo.png"/>
+              <!--<p id="info">Unity 3D Engine</p>-->
           </section>
-          <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS</a></button>
-          </section>          
-          <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS</a></button>
+          <section class="container-lc">
+              
+              <img id="logo-discord" src="public/discord-logo.png"/>
           </section>
-          <section class="column">
-              <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
+          <section class="container-lc">
+              <img id="logo-github" src="public/github-logo.png"/>
           </section>
-        </section>
-        <section class="rowgame2">
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a2">LINUX extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a2">WINDOWS extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a2">MACOS extra</a>
-        </section>
       </section>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-sublimtext" src="public/sublimtext-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-rider" src="public/rider-logo.png"/>
+          </section>
+          <section class="container-lc">
+              <img id="logo-vercel" src="public/vercel-logo.png"/>
+          </section>
+      </section>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-figma" src="public/figma-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-assetstore" src="public/assetstore-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-dicebear" src="public/dicebear-logo.png"/>
+          </section>
+      </section>
+      <section class="row">
+          <section class="container-lc">
+              <img id="logo-blender" src="public/blender-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-affinity" src="public/affinity-logo.png"/>  
+          </section>
+          <section class="container-lc">
+              <img id="logo-" src=""/>
+          </section>
+      </section>
+
     </section>
   </body>
-
+</html>
