--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					
 			</section>
 			<section class="s2">
-          		<a id="nav-item" style="display:flex; justify-content:center;" href="project.html">PROJECT</a>
-		  		<a id="nav-item" style="display:flex; justify-content:center;" href="https://git.rejna.org/LYVAM-Sudio/ReConnect">REJNA</a>
+          		<a id="nav-item" style="display:flex; justify-content:center;" href="game.html">Game</a>
+		  		<a id="nav-item" style="display:flex; justify-content:center;" href="https://git.rejna.org/LYVAM-Sudio/ReConnect">GITEA</a>
          		<!--<a id="nav-item" href="game.html#report">REPORT</a>--> 
         	</section>    
 	 		<section class="s3">
@@ -26,7 +26,7 @@
         	</section>	
 	</section>
 	<section class="s4">
-		<a id="nav-download" href="game.html">DOWNLOAD</a>
+		<a id="nav-download" href="download.html">DOWNLOAD</a>
 	</section>    
   </body>
 </html>
