--- a/studio.html
+++ b/studio.html
@@ -9,9 +9,9 @@
   <header>
     <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
 		<section class="navbar2">
-			<a class="nav-item" id="nav-present" href="studio.html">STUDIO</a>
-			<a class="nav-item" href="project.html">PROJECT</a>
-			<a class="nav-item" href="game.html">GAME</a>
+			<a class="nav-item" href="studio.html">STUDIO</a>
+      <a class="nav-item" href="game.html">GAME</a>
+      <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
 		</section>
   </header>
   <body>
