--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style2.css" />
-    <link rel="stylesheet" href="styles/style-project.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" href="public/favicon.ico">
   </head>
   <header>
