--- a/download.html
+++ b/download.html
@@ -15,41 +15,40 @@
     </section>
   </header>
   <body>
+
+
     <section class="coregame">
-        <section class="rowgame">
-            <h3 id="version-h3">Defense I - Version Alpha</h3>
-            <section class="column">
-                <button class="dwl-button" ><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneLinux64.zip" class="dwl-a">LINUX</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneWindows64.zip" class="dwl-a">WINDOWS</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneOSX.zip" class="dwl-a">MACOS</a></button>
-            </section>
-            <section class="column">
-                <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
-            </section>
+      <h3 id="version-h3">Defense I - Version Alpha</h3>
+      <section class="rowgame">
+        <section class="column">
+          <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneLinux64.zip" class="dwl-a">LINUX</a></button>
         </section>
-        <section class="rowgame">
-          <h3 id="version-h3">Defense II - Version Beta</h3>
-          <section class="column">
-              <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX</a></button>
-          </section>
-          <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS</a></button>
-          </section>          
-          <section class="column">
-              <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS</a></button>
-          </section>
-          <section class="column">
-              <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
-          </section>
+        <section class="column">
+          <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneWindows64.zip" class="dwl-a">WINDOWS</a></button>
         </section>
-        <section class="rowgame2">
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a2">LINUX extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a2">WINDOWS extra</a>
-          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a2">MACOS extra</a>
+        <section class="column">
+         <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneOSX.zip" class="dwl-a">MACOS</a></button>
+        </section> 
+        <section class="column">
+          <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
+        </section>
+      </section>
+      <h3 id="version-h3">Defense II - Version Beta</h3>
+      <section class="rowgame">
+        <section class="column">
+          <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a">LINUX</a></button>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Linux.zip" class="dwl-a2">extra</a>
+        </section>
+        <section class="column">
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-Windows.zip" class="dwl-a">WINDOWS</a></button>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-Windows.zip" class="dwl-a2">extra</a>
+        </section>          
+        <section class="column">
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Main-MacOs.app.zip" class="dwl-a">MACOS</a></button>
+          <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a2">extra</a>
+        </section>
+        <section class="column">
+          <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
         </section>
       </section>
     </section>
