fixed: logo header

--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style2.css" />
     <link rel="icon" href="public/favicon.ico">
   </head>
-  <header>
+  <header class="head2">
     <a id="logo-a"  href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
     <section class="navbar2">
       <a class="nav-item" href="studio.html">STUDIO</a>
