--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style.css" />
 	<link rel="icon" href="public/favicon.ico">
   </head>
-  <header>
+  <header class="head1">
 		<a href="index.html"><img id="logo1"src="public/Brand_Lyvam.svg"/></a>
 		<a href="index.html"><img id="logo1" style="padding: 8% 0% 0% 0%;" src="public/Logo_Lyvam_Studio.svg"/></a>
   </header>
