--- a/game.html
+++ b/game.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" href="public/favicon.ico">
   </head>
-  <header>
+  <header class="head2">
     <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
-		<section class="navbar2">
-			<a class="nav-item" href="studio.html">STUDIO</a>
-             <a class="nav-item" href="game.html">GAME</a>
-            <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
-		</section>
+	<section class="navbar2">
+	    <a class="nav-item" href="studio.html">STUDIO</a>
+        <a class="nav-item" href="game.html">GAME</a>
+        <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
+	</section>
   </header>
   <body>
     <section class="core">
