--- a/game.html
+++ b/game.html
@@ -17,60 +17,21 @@
   </header>
   <body>
     <section class="core">
-      <h2>HISTORY</h2>
-      <p>LYVAM Studio has announced its new game as ReConnect. This name obviously refers to the field of study of electronics to which the game relates, but also to its scenario. Indeed, the protagonist of the game's mission is to restore communications between the colony and the Earth. So, ReConnect can be heard in the sense reconnect the colony with Earth. Finally, it is possible to see a wider message to man. The game questions the behavior of man on Earth and his decision to create a colony on another planet rather than dealing with the consequences of these activities on Earth.
-      Elon Musk and his company SpaceX already plans this kind of project, announcing plans to conquer Mars within a century so that it can survive even when Earth is no longer habitable. So we can see in the name ReConnect, a message to reconnect with his humanity and our planet. More generally, ReConnect is a game of adventure, puzzle and combat, at the third! person, 3-dimensional and set in a semi-open alien science fiction world. The main mechanics of the game are electronic puzzle resolution, fighting aggressive entities, and exploring the world.
-      </p>
+        <h1>Reconnect</h1>
+        <p>ReConnect est un jeu d'aventure, d'énigme et de combat à la troisième personne, en 3D, se déroulant dans un monde semi-ouvert de science-fiction. Les principales mécaniques de jeu incluent la résolution de puzzles électroniques, le combat contre des entités agressives et l'exploration du monde extraterrestre d'Edenia.</p>
+        <p>Les joueurs devront explorer ce nouveau monde, affronter ses dangers, retrouver la colonie perdue et accomplir la mission initiale : rétablir les communications avec la Terre. En chemin, le joueur devra résoudre divers puzzles électroniques pour progresser, ouvrir des portes, réparer des outils de communication et se défendre contre les menaces.</p>
     </section>
-    <section class="core">
-      <h2>CREDITS</h2>
-      <section class="row">
-          <section class="container-lc">
-              <img id="logo-unity" src="public/unity-logo.png"/>
-              <!--<p id="info">Unity 3D Engine</p>-->
-          </section>
-          <section class="container-lc">
-              
-              <img id="logo-discord" src="public/discord-logo.png"/>
-          </section>
-          <section class="container-lc">
-              <img id="logo-github" src="public/github-logo.png"/>
-          </section>
-      </section>
-      <section class="row">
-          <section class="container-lc">
-              <img id="logo-sublimtext" src="public/sublimtext-logo.png"/>  
-          </section>
-          <section class="container-lc">
-              <img id="logo-rider" src="public/rider-logo.png"/>
-          </section>
-          <section class="container-lc">
-              <img id="logo-vercel" src="public/vercel-logo.png"/>
-          </section>
-      </section>
-      <section class="row">
-          <section class="container-lc">
-              <img id="logo-figma" src="public/figma-logo.png"/>  
-          </section>
-          <section class="container-lc">
-              <img id="logo-assetstore" src="public/assetstore-logo.png"/>  
-          </section>
-          <section class="container-lc">
-              <img id="logo-dicebear" src="public/dicebear-logo.png"/>
-          </section>
-      </section>
-      <section class="row">
-          <section class="container-lc">
-              <img id="logo-blender" src="public/blender-logo.png"/>  
-          </section>
-          <section class="container-lc">
-              <img id="logo-affinity" src="public/affinity-logo.png"/>  
-          </section>
-          <section class="container-lc">
-              <img id="logo-" src=""/>
-          </section>
-      </section>
-
+    <section class="core-div">
+        <div><img id="img-planet"src="public/game/planet.png"/></div>
+        <div><h3>Edenia</h3><p>Dans un futur proche et réaliste, la Terre est en déclin en raison de la dégradation environnementale causée par les activités humaines. Face à cette crise, l'humanité investit massivement dans l'exploration spatiale et envisage de faire d'une exoplanète nommée Edenia une nouvelle Terre. Plusieurs années après les premières missions de colonisation réussies sur Edenia, les communications avec la colonie sont soudainement rompues sans explication.</p><p>Une mission d'enquête est rapidement préparée et envoyée vers Edenia pour rétablir les communications avec la Terre. Le protagoniste du jeu fait partie de cette équipe d'urgence. Cependant, lors de l'atterrissage sur Edenia, la navette est confrontée à des conditions climatiques défavorables, provoquant son crash. </p></div>
+    </section>
+    <section class="core-div">
+        <div><h3>Puzzles</h3><p>Les joueurs devront résoudre des puzzles électriques et électroniques en manipulant des composants tels que des résistances, des générateurs, des interrupteurs et des portes logiques pour avancer dans le jeu.</p></div>
+        <div><img id="img-planet"src="public/game/bread.png"/></div>
+    </section>
+    <section class="core-div">
+        <div><img id="img-planet"src="public/game/player.png"/></div>
+        <div><h3>Pédagogiques</h3><p>Le nom ReConnect fait référence à la fois au domaine de l'électronique et au scénario du jeu, où le protagoniste doit reconnecter la colonie avec la Terre. Il porte également un message plus large, invitant l'humanité à se reconnecter avec elle-même et avec sa planète, questionnant la décision de fuir vers d'autres planètes plutôt que de faire face aux conséquences de nos actions sur Terre.</p></div>
     </section>
   </body>
 </html>
