--- a/download.html
+++ b/download.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/style2.css" />
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="public/logos/favicon.ico">
   </head>
-  <header class="head2">
-    <a id="logo-a"  href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
-    <section class="navbar2">
-      <a class="nav-item" href="studio.html">STUDIO</a>
-      <a class="nav-item" href="game.html">GAME</a>
-      <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
-    </section>
-  </header>
+  <header class="head">
+    	<a id="logo-a" href="index.html"><img id="logo2"src="public/logos/Logo_Lyvam.svg"/></a>
+		<section class="navbar1">
+        	<a class="nav-item" href="game.html">game</a>
+        	<a class="nav-item" id="nav-present" href="download.html">download</a>
+		</section>
+	</header>
   <body>
+    <section class="core-in">
 
-
+    </section>
     <section class="coregame">
       <h3 id="version-h3">Defense I - Version Alpha</h3>
       <section class="rowgame">
@@ -30,7 +30,7 @@
          <button class="dwl-button"><a href="https://github.com/LYVAM-Studio/ReConnect/releases/download/0.1.1/ReConnect-StandaloneOSX.zip" class="dwl-a">MACOS</a></button>
         </section> 
         <section class="column">
-          <button class="dwl-button-r"><a href="public/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
+          <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-1.pdf" class="dwl-a-r">REPORT</a></button>
         </section>
       </section>
       <h3 id="version-h3">Defense II - Version Beta</h3>
@@ -48,7 +48,7 @@
           <a href="https://git.rejna.org/LYVAM-Sudio/ReConnect/releases/download/defense-2/ReConnect-Def2-Elec-MacOs.app.zip" class="dwl-a2">extra</a>
         </section>
         <section class="column">
-          <button class="dwl-button-r"><a href="public/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
+          <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
         </section>
       </section>
     </section>
