--- a/game.html
+++ b/game.html
@@ -3,35 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/style2.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="icon" href="public/logos/favicon.ico">
   </head>
-  <header class="head2">
-    <a id="logo-a" href="index.html"><img id="logo2"src="public/Logo_Lyvam.svg"/></a>
-	<section class="navbar2">
-	    <a class="nav-item" href="studio.html">STUDIO</a>
-        <a class="nav-item" href="game.html">GAME</a>
-        <a class="nav-item" id="nav-present" href="download.html">DOWNLOAD</a>
-	</section>
-  </header>
+  <header class="head">
+    	<a id="logo-a" href="index.html"><img id="logo2"src="public/logos/Logo_Lyvam.svg"/></a>
+		<section class="navbar1">
+        	<a class="nav-item" href="game.html">game</a>
+        	<a class="nav-item" id="nav-present" href="download.html">download</a>
+		</section>
+	</header>
   <body>
-    <section class="core">
-        <h1>Reconnect</h1>
-        <p>ReConnect est un jeu d'aventure, d'énigme et de combat à la troisième personne, en 3D, se déroulant dans un monde semi-ouvert de science-fiction. Les principales mécaniques de jeu incluent la résolution de puzzles électroniques, le combat contre des entités agressives et l'exploration du monde extraterrestre d'Edenia.</p>
-        <p>Les joueurs devront explorer ce nouveau monde, affronter ses dangers, retrouver la colonie perdue et accomplir la mission initiale : rétablir les communications avec la Terre. En chemin, le joueur devra résoudre divers puzzles électroniques pour progresser, ouvrir des portes, réparer des outils de communication et se défendre contre les menaces.</p>
-    </section>
-    <section class="core-div">
-        <div><img id="img-planet"src="public/game/planet.png"/></div>
+    <section class="core-in" style="background-color: white;">
+      <video controls preload id="video-game" autoplay loop muted>
+        <source src="public/game/trailer.mp4" type="video/mp4">
+      </video>
+      <section class="core-div">
+        <div><img id="img-screen"src="public/game/spaceship.jpg"/></div>
+        <div>
+          <h1>Reconnect</h1>
+          <p>ReConnect est un jeu d'aventure, d'énigme et de combat à la troisième personne, en 3D, se déroulant dans un monde semi-ouvert de science-fiction. Les principales mécaniques de jeu incluent la résolution de puzzles électroniques, le combat contre des entités agressives et l'exploration du monde extraterrestre d'Edenia.</p>
+          <p>Les joueurs devront explorer ce nouveau monde, affronter ses dangers, retrouver la colonie perdue et accomplir la mission initiale : rétablir les communications avec la Terre. En chemin, le joueur devra résoudre divers puzzles électroniques pour progresser, ouvrir des portes, réparer des outils de communication et se défendre contre les menaces.</p>
+        </div>
+        </section>
+      <section class="core-div">
+        <div><img id="img-screen"src="public/game/planet.png"/></div>
         <div><h3>Edenia</h3><p>Dans un futur proche et réaliste, la Terre est en déclin en raison de la dégradation environnementale causée par les activités humaines. Face à cette crise, l'humanité investit massivement dans l'exploration spatiale et envisage de faire d'une exoplanète nommée Edenia une nouvelle Terre. Plusieurs années après les premières missions de colonisation réussies sur Edenia, les communications avec la colonie sont soudainement rompues sans explication.</p><p>Une mission d'enquête est rapidement préparée et envoyée vers Edenia pour rétablir les communications avec la Terre. Le protagoniste du jeu fait partie de cette équipe d'urgence. Cependant, lors de l'atterrissage sur Edenia, la navette est confrontée à des conditions climatiques défavorables, provoquant son crash. </p></div>
-    </section>
+     </section>
     <section class="core-div">
-        <div><h3>Puzzles</h3><p>Les joueurs devront résoudre des puzzles électriques et électroniques en manipulant des composants tels que des résistances, des générateurs, des interrupteurs et des portes logiques pour avancer dans le jeu.</p></div>
-        <div><img id="img-planet"src="public/game/bread.png"/></div>
-    </section>
-    <section class="core-div">
-        <div><img id="img-planet"src="public/game/player.png"/></div>
-        <div><h3>Pédagogiques</h3><p>Le nom ReConnect fait référence à la fois au domaine de l'électronique et au scénario du jeu, où le protagoniste doit reconnecter la colonie avec la Terre. Il porte également un message plus large, invitant l'humanité à se reconnecter avec elle-même et avec sa planète, questionnant la décision de fuir vers d'autres planètes plutôt que de faire face aux conséquences de nos actions sur Terre.</p></div>
+         <div><h3>Puzzles</h3><p>Les joueurs devront résoudre des puzzles électriques et électroniques en manipulant des composants tels que des résistances, des générateurs, des interrupteurs et des portes logiques pour avancer dans le jeu.</p></div>
+         <div><img id="img-screen"src="public/game/bread.jpg"/></div>
+      </section>
+      <section class="core-div">
+          <div><img id="img-screen"src="public/game/world.jpg"/></div>
+          <div><h3>Pédagogiques</h3><p>Le nom ReConnect fait référence à la fois au domaine de l'électronique et au scénario du jeu, où le protagoniste doit reconnecter la colonie avec la Terre. Il porte également un message plus large, invitant l'humanité à se reconnecter avec elle-même et avec sa planète, questionnant la décision de fuir vers d'autres planètes plutôt que de faire face aux conséquences de nos actions sur Terre.</p></div>
+      </section>
     </section>
   </body>
 </html>
