fixed: ytb link

--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
   <body>
     <section class="core-in" style="background-color: white;">
       <video controls preload id="video-game" autoplay loop muted>
-        <source src="public/game/trailer.mp4" type="video/mp4">
+        <source src="https://youtu.be/oq5SInSH6BY" type="video/mp4">
       </video>
       <section class="core-div">
         <div><img id="img-screen"src="public/game/spaceship.jpg"/></div>
