--- a/game.html
+++ b/game.html
@@ -15,9 +15,7 @@
 	</header>
   <body>
     <section class="core-in" style="background-color: white;">
-      <video controls preload id="video-game" autoplay loop muted>
-        <source src="https://youtu.be/oq5SInSH6BY" type="video/mp4">
-      </video>
+      <iframe id="video-game" src="https://www.youtube.com/embed/oq5SInSH6BY" frameborder="0" allowfullscreen controls preload autoplay loop muted></iframe>
       <section class="core-div">
         <div><img id="img-screen"src="public/game/spaceship.jpg"/></div>
         <div>
