--- a/download.html
+++ b/download.html
@@ -49,6 +49,25 @@
         </section>
         <section class="column">
           <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="dwl-a3">extra</a>
+        </section>
+      </section>
+      <h3 id="version-h3">Final Defense - Stable Version</h3>
+      <section class="rowgame">
+        <section class="column">
+          <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Server-Linux.zip" class="dwl-a">Server</a></button>
+        </section>
+          <section class="column">
+          <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-Linux.zip" class="dwl-a">LINUX</a></button>
+        </section>
+        <section class="column">
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-MacOS.zip" class="dwl-a">WINDOWS</a></button>
+        </section>          
+        <section class="column">
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-Windows.zip" class="dwl-a">MACOS</a></button>
+        </section>
+        <section class="column">
+          <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
         </section>
       </section>
     </section>
