--- a/game.html
+++ b/game.html
@@ -20,22 +20,34 @@
         <div><img id="img-screen"src="public/game/spaceship.jpg"/></div>
         <div>
           <h1>Reconnect</h1>
-          <p>ReConnect est un jeu d'aventure, d'énigme et de combat à la troisième personne, en 3D, se déroulant dans un monde semi-ouvert de science-fiction. Les principales mécaniques de jeu incluent la résolution de puzzles électroniques, le combat contre des entités agressives et l'exploration du monde extraterrestre d'Edenia.</p>
-          <p>Les joueurs devront explorer ce nouveau monde, affronter ses dangers, retrouver la colonie perdue et accomplir la mission initiale : rétablir les communications avec la Terre. En chemin, le joueur devra résoudre divers puzzles électroniques pour progresser, ouvrir des portes, réparer des outils de communication et se défendre contre les menaces.</p>
+          <p>ReConnect is a 3D third-person adventure, puzzle, and combat game set in a semi-open world of science fiction. Key game mechanics include electronic puzzle resolution, fighting aggressive entities, and exploring Edenia's alien world. </p>
+<p>Players will have to explore this new world, face its dangers, find the lost colony, and accomplish the original mission: restore communications with Earth. Along the way, the player will have to solve various electronic puzzles to progress, open doors, repair communication tools and defend against threats.</p>
         </div>
         </section>
       <section class="core-div">
         <div><img id="img-screen"src="public/game/planet.png"/></div>
-        <div><h3>Edenia</h3><p>Dans un futur proche et réaliste, la Terre est en déclin en raison de la dégradation environnementale causée par les activités humaines. Face à cette crise, l'humanité investit massivement dans l'exploration spatiale et envisage de faire d'une exoplanète nommée Edenia une nouvelle Terre. Plusieurs années après les premières missions de colonisation réussies sur Edenia, les communications avec la colonie sont soudainement rompues sans explication.</p><p>Une mission d'enquête est rapidement préparée et envoyée vers Edenia pour rétablir les communications avec la Terre. Le protagoniste du jeu fait partie de cette équipe d'urgence. Cependant, lors de l'atterrissage sur Edenia, la navette est confrontée à des conditions climatiques défavorables, provoquant son crash. </p></div>
+        <div><h3>Edenia</h3><p>In the near and realistic future, Earth is declining due to environmental degradation caused by human activities. In the face of this crisis, humanity is investing heavily in space exploration and is considering turning an exoplanet named Edenia into a new Earth. Several years after the first successful settlement missions on Edenia, communications with the colony were suddenly broken without explanation. </p><p>A fact-finding mission is quickly prepared and sent to Edenia to restore communications with Earth. The protagonist of the game is part of this emergency team. However, when landing on Edenia, the shuttle is faced with adverse weather conditions, causing its crash.</p></div>
      </section>
     <section class="core-div">
-         <div><h3>Puzzles</h3><p>Les joueurs devront résoudre des puzzles électriques et électroniques en manipulant des composants tels que des résistances, des générateurs, des interrupteurs et des portes logiques pour avancer dans le jeu.</p></div>
+         <div><h3>Puzzles</h3><p>Players will have to solve electrical and electronic puzzles by manipulating components such as resistors, generators, switches and logic gates to advance in the game.</p></div>
          <div><img id="img-screen"src="public/game/bread.jpg"/></div>
       </section>
       <section class="core-div">
           <div><img id="img-screen"src="public/game/world.jpg"/></div>
-          <div><h3>Pédagogiques</h3><p>Le nom ReConnect fait référence à la fois au domaine de l'électronique et au scénario du jeu, où le protagoniste doit reconnecter la colonie avec la Terre. Il porte également un message plus large, invitant l'humanité à se reconnecter avec elle-même et avec sa planète, questionnant la décision de fuir vers d'autres planètes plutôt que de faire face aux conséquences de nos actions sur Terre.</p></div>
+          <div><h3>Educational</h3><p>The name ReConnect refers to both the electronics field and the game scenario, where the protagonist must reconnect the colony with Earth. It also carries a broader message, inviting humanity to reconnect with itself and with its planet, questioning the decision to flee to other planets rather than facing the consequences of our actions on Earth.</p></div>
       </section>
+    </section>
+    <section class="band">
+      <img id="affinity-logo" src="public/credits/affinity-logo.png" alt="Affinity logo">
+      <img id="blender-logo" src="public/credits/blender-logo.png">
+      <img id="dicebear-logo" src="public/credits/dicebear-logo.png">
+      <img id="discord-logo" src="public/credits/discord-logo.png">
+      <img id="figma-logo" src="public/credits/figma-logo.png">
+      <img id="github-logo" src="public/credits/github-logo.png">
+      <img id="rider-logo" src="public/credits/rider-logo.png">
+      <img id="sublimtext-logo" src="public/credits/sublimtext-logo.png">
+      <img id="unity-logo" src="public/credits/unity-logo.png">
+      <img id="vercel-logo" src="public/credits/vercel-logo.png">
     </section>
   </body>
 </html>
