fixed: defense report & game-1

--- a/download.html
+++ b/download.html
@@ -67,7 +67,7 @@
           <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-Windows.zip" class="dwl-a">MACOS</a></button>
         </section>
         <section class="column">
-          <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-2.pdf" class="dwl-a-r">REPORT</a></button>
+          <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-Final.pdf" class="dwl-a-r">REPORT</a></button>
         </section>
       </section>
     </section>
