--- a/game.html
+++ b/game.html
@@ -15,7 +15,9 @@
 	</header>
   <body>
     <section class="core-in" style="background-color: white;">
-      <iframe id="video-game" src="https://www.youtube.com/embed/oq5SInSH6BY" frameborder="0" allowfullscreen controls preload autoplay loop muted></iframe>
+      <section class="core-div-video"">
+              <iframe id="video-game" src="https://www.youtube.com/embed/oq5SInSH6BY" frameborder="0" allowfullscreen controls preload autoplay loop muted></iframe>
+      </section>
       <section class="core-div">
         <div><img id="img-screen"src="public/game/spaceship.jpg"/></div>
         <div>
