--- a/download.html
+++ b/download.html
@@ -61,10 +61,10 @@
           <button class="dwl-button" ><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-Linux.zip" class="dwl-a">LINUX</a></button>
         </section>
         <section class="column">
-          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-MacOS.zip" class="dwl-a">WINDOWS</a></button>
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Windows-Installer.exe " class="dwl-a">WINDOWS</a></button>
         </section>          
         <section class="column">
-          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-Windows.zip" class="dwl-a">MACOS</a></button>
+          <button class="dwl-button"><a href="https://git.rejna.org/LYVAM-Studio/ReConnect/releases/download/defense-final/ReConnect-Client-MacOS.zip" class="dwl-a">MACOS</a></button>
         </section>
         <section class="column">
           <button class="dwl-button-r"><a href="public/docs/Technical-Defense Report-Final.pdf" class="dwl-a-r">REPORT</a></button>
